AC_INIT(
	[Mercury Utils] ,
	[1.0] ,
	[mariano.pedro@gmail.com] ,
	[mercury-utils-1.0] ,
	[https://github.com/plsm/mercury-utils]
)
AC_CONFIG_SRCDIR(./mersenneTwister-int.m)
AC_CONFIG_SRCDIR(./mersenneTwister-integer.m)

# Check Java compiler
mersenne_twister
AC_CONFIG_FILES()
AC_OUTPUT([Makefile])
